--- a/BNet.csproj
+++ b/BNet.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,12 +55,17 @@
     <Compile Include="Extensions.cs" />
     <Compile Include="NetHandler.cs" />
     <Compile Include="Plugin\ConsoleModules\BNet.cs" />
+    <Compile Include="Plugin\ConsoleModules\BitStream.cs" />
     <Compile Include="Plugin\Initializer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Protocol.cs" />
     <Compile Include="RC4.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BitStreamEditor\BitStreamEditor.csproj">
+      <Project>{C1E91366-A993-4223-BD42-A1F35E318BE8}</Project>
+      <Name>BitStreamEditor</Name>
+    </ProjectReference>
     <ProjectReference Include="..\DeepLogic.Shared\DeepLogic.Shared.csproj">
       <Project>{D5F28FEF-8469-429F-A4EA-99933A526919}</Project>
       <Name>DeepLogic.Shared</Name>
